dodanie sggw do patronatu

--- a/index.html
+++ b/index.html
@@ -303,20 +303,25 @@
 						<h5>MARSZAŁEK SEJMU RZECZYPOSPOLITEJ POLSKIEJ</h5>
 						<p>Marek Kuchciński</p>
 					</div> -->
-					<div class="col-xs-12 col-md-4 sponsorship">
+					<div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/partner1x.png" alt="MINISTER ROLNICTWA I ROZWOJU WSI">
 						<h5>MINISTER ROLNICTWA I ROZWOJU WSI</h5>
 						<p>Jan Krzysztof Ardanowski</p>
 					</div>
-					<div class="col-xs-12 col-md-4 sponsorship">
+					<div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/partner2x.png" alt="MARSZAŁEK WOJEWÓDZTWA PODKARPACKIEGO">
 						<h5>MARSZAŁEK WOJEWÓDZTWA PODKARPACKIEGO</h5>
 						<p>Władysław Ortyl</p>
 					</div>
-					<div class="col-xs-12 col-md-4 sponsorship">
+					<div class="col-xs-12 col-md-3 sponsorship">
+						<img src="src/assets/img/partnersggw.png" alt="REKTOR SZKOŁY GŁÓWNEJ GOSPODARSTWA WIEJSKIEGO W WARSZAWIE">
+						<h5>REKTOR SZKOŁY GŁÓWNEJ GOSPODARSTWA WIEJSKIEGO</h5>
+						<p>Prof. dr hab. Wiesław Bielawski</p>
+					</div>
+					<div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/partner4x.png" alt="REKTOR UNIWERSYTETU RZESZOWSKIEGO">
 						<h5>REKTOR UNIWERSYTETU RZESZOWSKIEGO</h5>
-						<p>Prof. dr. hab. Sylwester Czopek</p>
+						<p>Prof. dr hab. Sylwester Czopek</p>
 					</div>
 
 
