--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
 					<div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/partnersggw.png" alt="REKTOR SZKOŁY GŁÓWNEJ GOSPODARSTWA WIEJSKIEGO W WARSZAWIE">
 						<h5>REKTOR SZKOŁY GŁÓWNEJ GOSPODARSTWA WIEJSKIEGO</h5>
-						<p>Prof. dr hab. Wiesław Bielawski</p>
+						<p>prof. dr hab. Wiesław Bielawski</p>
 					</div>
 					<div class="col-xs-12 col-md-3 sponsorship">
 						<img src="src/assets/img/partner4x.png" alt="REKTOR UNIWERSYTETU RZESZOWSKIEGO">
 						<h5>REKTOR UNIWERSYTETU RZESZOWSKIEGO</h5>
-						<p>Prof. dr hab. Sylwester Czopek</p>
+						<p>prof. dr hab. Sylwester Czopek</p>
 					</div>
 
 
