--- a/src/html/wydarzenia.html
+++ b/src/html/wydarzenia.html
@@ -124,6 +124,39 @@
 	    <div class="col-md-12">
 	        <div class="sponsors-list">
 	          	<ul>
+          		<!--<h3></h3> 
+				 <li><img src="../../src/assets/img/sponsorzy/mini/wot200.png" alt="sponsors"/></li> -->
+				<h4>Atrakcją III Agro Targów Wschód będą samoloty sąsiedniego aeroklubu.</h4>
+				
+				<!-- <h4>W ramach turnieju odbędą się następujące konkurencje:</h4>
+				<h4>- test wiedzy: BHP w rolnictwie</h4>
+				<h4>- przerzucanie opony na czas</h4>
+				<h4>- wymiana koła w samochodzie</h4>
+				<h4>- cofanie ciągnikiem z przyczepą dwuosiową</h4>
+				<h4>- slalom taczkami </h4> -->
+				<div class="container gallery">		
+					
+					<div class="row">
+					   <div class="col-xs-12-col-sm-6 col-md-4"><a href="../../src/assets/img/wydarzenia/loty/1.png"><img class="Thumbnail" src="../../src/assets/img/wydarzenia/loty/1.png" alt=""></a></div>
+					  <div class="col-xs-12-col-sm-6 col-md-4"><a href="../../src/assets/img/wydarzenia/loty/2.png"><img class="Thumbnail" src="../../src/assets/img/wydarzenia/loty/2.png" alt=""></a></div>
+					  <div class="col-xs-12-col-sm-6 col-md-4"><a href="../../src/assets/img/wydarzenia/loty/3.png"><img class="Thumbnail" src="../../src/assets/img/wydarzenia/loty/3.png" alt=""></a></div>
+					</div>
+
+				</div>
+			
+		  		</ul>
+			</div>
+	    </div>
+	</div>	
+  </div>
+</section>
+
+<section id="sponsors" class="sponsors_3 section-padding  secondary-bg">
+  <div class="container">
+	<div class="row">
+	    <div class="col-md-12">
+	        <div class="sponsors-list">
+	          	<ul>
           		<h3> Politechnika Rzeszowska </h3> 
 				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/wot200.png" alt="sponsors"/></li> -->
 				<h4>Politechnika Rzeszowska zaprezentuje łazika marsjańskiego zbudowanego przez studentów, bolid PRz Racing Team, wielofunkcyjny szybowiec AOS-71 oraz pracę drukarek 3D.</h4>
