trzy nowe loga wystawcow

--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -149,6 +149,9 @@
 	        	        		 <li><img src="../../src/assets/img/sponsorzy/mini/podr300.png" alt="sponsors"/></li> -->
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
+				<li><img src="../../src/assets/img/sponsorzy/mini/rolmech250.jpg" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/fuhsdrobny250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/agromarek250.png" alt="sponsors"/></li>				
 				<li><img src="../../src/assets/img/sponsorzy/mini/las-biesz250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/sas250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/mhr250.png" alt="sponsors"/></li>
