--- a/src/html/wydarzenia.html
+++ b/src/html/wydarzenia.html
@@ -118,22 +118,22 @@
   </div>
 </section> -->
 
-<section id="sponsors" class="sponsors_3 section-padding  secondary-bg">
+<!-- <section id="sponsors" class="sponsors_3 section-padding  secondary-bg">
   <div class="container">
 	<div class="row">
 	    <div class="col-md-12">
 	        <div class="sponsors-list">
 	          	<ul>
-          		<!--<h3></h3> 
-				 <li><img src="../../src/assets/img/sponsorzy/mini/wot200.png" alt="sponsors"/></li> -->
+          		<h3></h3> 
+				 <li><img src="../../src/assets/img/sponsorzy/mini/wot200.png" alt="sponsors"/></li>
 				<h4>Atrakcją III Agro Targów Wschód będą samoloty sąsiedniego aeroklubu.</h4>
 				
-				<!-- <h4>W ramach turnieju odbędą się następujące konkurencje:</h4>
+				<h4>W ramach turnieju odbędą się następujące konkurencje:</h4>
 				<h4>- test wiedzy: BHP w rolnictwie</h4>
 				<h4>- przerzucanie opony na czas</h4>
 				<h4>- wymiana koła w samochodzie</h4>
 				<h4>- cofanie ciągnikiem z przyczepą dwuosiową</h4>
-				<h4>- slalom taczkami </h4> -->
+				<h4>- slalom taczkami </h4>
 				<div class="container gallery">		
 					
 					<div class="row">
@@ -149,7 +149,7 @@
 	    </div>
 	</div>	
   </div>
-</section>
+</section> -->
 
 
 <section id="sponsors" class="sponsors_3 section-padding  secondary-bg">
