--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -172,6 +172,7 @@
 				<li><img src="../../src/assets/img/sponsorzy/mini/traktorcompl250_new.png" alt="sponsors"/></li>	
 				<li><img src="../../src/assets/img/sponsorzy/mini/farmsaat250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/blank250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/blank250.png" alt="sponsors"/></li>
 
 					
 						
