dodanie wystawcy scania

--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -149,6 +149,7 @@
 	        	        		 <li><img src="../../src/assets/img/sponsorzy/mini/podr300.png" alt="sponsors"/></li> -->
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
+           		<li><img src="../../src/assets/img/sponsorzy/mini/scania250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/agromasz250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/arkop250.png" alt="sponsors"/></li> 
            		<li><img src="../../src/assets/img/sponsorzy/mini/pzl250.png" alt="sponsors"/></li> 
@@ -161,7 +162,7 @@
 				<li><img src="../../src/assets/img/sponsorzy/mini/sas250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/mhr250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/spnowosielce250.png" alt="sponsors"/></li>
-				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/scania250.png" alt="sponsors"/></li>
+				<!-- 
 				<li><img src="../../src/assets/img/sponsorzy/mini/chemirol250.png" alt="sponsors"/></li> -->
 				<li><img src="../../src/assets/img/sponsorzy/mini/agroecopower250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/igppolska250.png" alt="sponsors"/></li>
@@ -171,7 +172,7 @@
 				<li><img src="../../src/assets/img/sponsorzy/mini/domix250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/traktorcompl250_new.png" alt="sponsors"/></li>	
 				<li><img src="../../src/assets/img/sponsorzy/mini/farmsaat250.png" alt="sponsors"/></li>
-				<li><img src="../../src/assets/img/sponsorzy/mini/blank250.png" alt="sponsors"/></li>
+				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/blank250.png" alt="sponsors"/></li> -->
 				<li><img src="../../src/assets/img/sponsorzy/mini/blank250.png" alt="sponsors"/></li>
 
 					
