daondanie nowych wystawców

--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -149,6 +149,8 @@
 	        	        		 <li><img src="../../src/assets/img/sponsorzy/mini/podr300.png" alt="sponsors"/></li> -->
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
+				<li><img src="../../src/assets/img/sponsorzy/mini/innvigo250.png" alt="sponsors"/></li>
+           		<li><img src="../../src/assets/img/sponsorzy/mini/remetcnc250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/scania250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/agromasz250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/arkop250.png" alt="sponsors"/></li> 
