--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -82,14 +82,13 @@
 
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
-                        <!-- <p>
-                            <b>Biuro Agro Targów Wschód:</b> <br>
-                            PPHU Sawa Expo Stanisław Sawa <br>
-                            ul. Przemyska 37, Skołoszów <br>
-                            37-550 Radymno <br>
-                            Tel. <b>+48 606 418 785 </b><br>
-                            <span><a href="mailto:biuro@agrotargiwschod.pl">e-mail: biuro@agrotargiwschod.pl</a></span>
-                        </p> -->
+                       <p>
+                           <b>Dyrektor zarządzający:</b> <br>
+                           Krzysztof Sawa <br>
+                           Contact in English:<br>
+                           Tel. <b>+ 48 517 478 770 </b><br>
+                           <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span>
+                       </p>
                         <!--<p>
                             <b>Adres do korespondencji:</b> <br>
                             PPHU Sawa Expo Stanisław Sawa <br>
