dodanie stron z tłumaczeniem

--- a/index-en.html
+++ b/index-en.html
@@ -124,8 +124,8 @@
 <!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
 				 -->				<div>
 					<p class="date"></p>
-					<h3 class="title">Państwowe Instytuty Badawcze na Targach</h3>
-					<p class="description">III Międzynarodowe Agro Targi Wschód będą miejscem, gdzie nie zabraknie polskiej nauki, która wyznacza standardy nowoczesnego i efektywnego rolnictwa.</p>
+					<h3 class="title">National Research Institutes at the Fair</h3>
+					<p class="description">III International  Agro Targi Wschód will be a place where there will be Polish science, which sets standards for modern and effective agriculture.</p>
 					<a href="src/html/single-news17.html">Read on</a>
 				</div>
 			</div>
@@ -134,8 +134,8 @@
 				<!-- <img src="src/assets/img/news15/logomin.png"  alt="" class="header"> -->
 				<div>
 					<p class="date"></p>
-					<h3 class="title">Marszałek Zaprasza</br></br></h3>
-					<p class="description">Marszałek Województwa Podkarpackiego zaprasza na III Międzynarodowe Agro Targi Wschód</p>
+					<h3 class="title">Marshal invites</br></br></h3>
+					<p class="description">The Marshal of the Podkarpackie Province invites to the 3rd International Agro Targi Wschód</p>
 					<a href="src/html/single-news18.html">Read on</a>
 				</div>
 			</div>
@@ -145,8 +145,8 @@
 				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
 				<div>
 					<p class="date"></p>
-					<h3 class="title">Współpraca z Politechniką Rzeszowską</h3>
-					<p class="description">Współpraca polegająca na obustronnej promocji Agro Targów Wschód oraz Politechniki Rzeszowskiej</p>
+					<h3 class="title">Cooperation with the Rzeszów University of Technology</h3>
+					<p class="description">Cooperation based on the mutual promotion of Agro Targów Wschód and Rzeszów University of Technology</p>
 					<a href="src/html/single-news19.html">Read on</a>
 				</div>
 			</div>
