--- a/src/html/exhibitorsold-en.html
+++ b/src/html/exhibitorsold-en.html
@@ -49,7 +49,7 @@
 		<div class="container">
 			<ul class="breadcrumbs">
 				<li><a href="../../index.html">start</a></li>
-				<li class="active"><a href="">wystawcy</a></li>
+				<li class="active"><a href="">Exhibitors</a></li>
 			</ul>
 			
 
