--- a/src/html/galleries-en.html
+++ b/src/html/galleries-en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-	<title> 8-9 czerwca 2019 III Agro Targi Wschód </title>
+	<title> 8-9 June 2019 III Agro Targi Wschód </title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
@@ -32,16 +32,17 @@
         <div class="hamburger"></div>		
 		<nav>
 			<ul class="menu">
-				<li><a href="../../index.html">Start</a></li>
-				<li><a href="../../src/html/news.html">Aktualności</a></li>
-				<li><a href="../../src/html/exhibitors.html">Wystawcy</a></li>
-				<!-- <li><a href="../../src/html/for-exhibitors-application.html">Cennik</a></li> -->
-				<li><a href="../../src/html/for-exhibitors.html">Dla wystawców</a></li>
-				<li><a href="../../src/html/program.html">Plan-Program targów</a></li>				
-				<li><a href="../../src/html/galleries.html">Galeria</a></li>
-				<li><a href="../../#patronat">Patronat</a></li>
-				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<li class="flag GB"><a href="../../src/html/galleries-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				<li><a href="../../index-en.html">Start</a></li>
+                <li><a href="../../src/html/news-en.html">News</a></li>
+                <li><a href="../../src/html/exhibitors-en.html">Exhibitors</a></li>
+                <!-- <li><a href="../../src/html/for-exhibitors-application.html">Cennik</a></li> -->
+                <li><a href="../../src/html/for-exhibitors-en.html">For exhibitors</a></li>
+                <li><a href="../../src/html/program-en.html">Plan-Programme</a></li>                
+                <li><a href="../../src/html/galleries-en.html">Gallery</a></li>
+                <!-- <li><a href="../../#Partnerzy">Partnerzy</a></li> -->
+                <li><a href="../../#patronat">Patronage</a></li>
+                <li><a href="../../src/html/contact-en.html">Contact</a></li>
+                <li class="flag UK"><a href="../../src/html/galleries.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
 				<!-- <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
 				<li class="flag UK"><a href="#"><img src="../assets/img/ukraineflag.png" alt="ukraina"></a></li> -->
 
@@ -52,8 +53,8 @@
 		<div class="container">
 			<ul class="breadcrumbs">
 				<li><a href="../../index.html">start</a></li>				
-				<li><a href="../../src/html/news.html">dla zwiedzających</a></li>
-				<li class="active"><a href="">Galeria</a></li>
+				<li><a href="../../src/html/news.html">FOR VISITORS </a></li>
+				<li class="active"><a href="">GALLERY</a></li>
 			</ul>
 			
 		</div>			
@@ -64,7 +65,7 @@
 		</div>	
 		<div class="newsContent">
 			<p class="date"></p>
-			<h3 class="title">II edycja targów - 9-10 czerwca 2018</h3>
+			<h3 class="title">Second edition of the fair - 9-10 June 2018</h3>
 			
 		</div> 
 
@@ -269,7 +270,7 @@
 
 
 		<div class="newsNav">
-			<a class="prev" href="../../index.html">Wstecz</a>
+			<a class="prev" href="../../index-en.html">Back</a>
 			<!-- <a class="next" href="single-news4.html">następny wpis</a> -->
 		</div>
 	</div>
@@ -278,34 +279,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-3">
-                        <a href="../../index.html"><img src="../../src/assets/img/logowhite.png" alt="targi"></a>                        
+                    <a href="/"><img src="../../src/assets/img/logowhite.png" alt="targi"></a>
                     <img src="../../src/assets/img/sawalogowhite.png" alt="sawa">
+                    <p>P.P.H.U. Sawa Expo Stanisław Sawa<br>
+                        Nowosiółki 79, 22-652 Telatyn<br>
+                        NIP: 921 133 95 62<br>
+                        REGON: 950280142
+                    </p>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="col-xs-12 col-sm-6 col-md-2">
                     <ul>Start
-                        <li><a href="news.html">Aktualności</a></li>
-                        <li><a href="program.html">Program targów</a></li>               
-<!--                         <li><a href="for-visitors.html">Dla zwiedzających</a></li> -->
-                        <li><a href="for-exhibitors.html">Dla wystawców</a></li>
-                        <li><a href="galleries.html">Galeria</a></li>
-                        <li><a href="contact.html">Kontakt</a></li>
-                        <!-- <li><a href="about.html">Agro Targi Wschód</a></li> -->
+                        <li><a href="src/html/news-en.html">News</a></li>
+                        <li><a href="src/html/program-en.html">Plan-Programme</a></li>               
+                        <!-- <li><a href="src/html/for-visitors.html">Dla zwiedzających</a></li> -->
+                        <li><a href="src/html/for-exhibitors-en.html">For exhibitors</a></li>
+                        <li><a href="src/html/galleries-en.html">Gallery</a></li>
+                        <li><a href="src/html/contact-en.html">Contact</a></li>
+                        
+                        <!-- <li><a href="src/html/about.html">Agro Targi Wschód</a></li> -->
                     </ul>
                 </div>
-                <!-- <div class="col-xs-12 col-sm-4 col-md-2">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-2">
                     <ul>Dla zwiedzających
-                        <li><a href="idea.html">Idea targów</a></li>
-                        <li><a href="about.html">O targach</a></li>
-                        <li><a href="galleries.html">Galeria</a></li>
-                        <li><a href="download.html">Do pobrania</a></li>
+                        <li><a href="src/html/idea.html">Idea targów</a></li>
+                        <li><a href="src/html/about.html">O targach</a></li>
+                        <li><a href="src/html/galleries.html">Galeria</a></li>
+                        <li><a href="src/html/download.html">Do pobrania</a></li>
                     </ul>
                 </div> -->
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <ul>Dla wystawców
-                        <li><a href="for-exhibitors-application.html">Zgłoszenia</a></li>
-                        <li><a href="for-exhibitors-regulations.html">Regulamin</a></li>
-                        <!-- <li><a href="for-exhibitors-drive.html">Dojazd i hotele</a></li> -->
-                        <!-- <li><a href="for-exhibitors-comm.html">Reklama</a></li> -->
+                <div class="col-xs-12 col-sm-6 col-md-2">
+                    <ul>For exhibitors
+                        <li><a href="src/html/for-exhibitors-application-en.html">Applications</a></li>
+                        <li><a href="src/html/for-exhibitors-regulations-en.html">Regulations</a></li>
+                        <!-- <li><a href="src/html/for-exhibitors-drive.html">Dojazd i hotele</a></li> 
+                        <li><a href="src/html/for-exhibitors-comm.html">Reklama</a></li>-->
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
@@ -313,8 +320,8 @@
                 </div>
             </div>
             <div class="row copyrights">
-                <p>Copyright © 2019 | AGRO TARGI WSCHÓD, SAWA EXPO - Wszystkie prawa zastrzeżone</p>
-                <p>Realizacja: SAWA EXPO</p>
+                <p>Copyright © 2019 | AGRO TARGI WSCHÓD, SAWA EXPO - All rights reserved</p>
+                <p>Implementation: SAWA EXPO</p>
             </div>
         </div>
     </footer>
