--- a/src/html/zaproszenie.html
+++ b/src/html/zaproszenie.html
@@ -41,7 +41,7 @@
                 <li><a href="../../src/html/galleries.html">Galeria</a></li>
                 <li><a href="../../#patronat">Patronat</a></li>
                 <li><a href="../../src/html/contact.html">Kontakt</a></li>
-                <li class="flag GB"><a href="../../src/html/zaproszenie.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+                <li class="flag GB"><a href="../../src/html/zaproszenie-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
                 <!-- <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
                 <li class="flag UK"><a href="#"><img src="../assets/img/ukraineflag.png" alt="ukraina"></a></li> -->
 
@@ -118,7 +118,7 @@
                         <img class="icon" src="../../src/assets/img/ZGLOSZENIA.png" alt="">
                         <h4>Zgłoszenia</h4>
                         <p>Formularze zgłoszeniowe na III edycję „Agro Targi Wschód” 2019 są dostępne w wersji elektronicznej. </p>
-                        <a href="for-exhibitors-application.html" class="">czytaj</a>
+                        <a href="for-exhibitors-application-en.html" class="">czytaj</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-6 no-padding">
@@ -126,7 +126,7 @@
                         <img class="icon" src="../../src/assets/img/REGULAMIN.png" alt="">
                         <h4>Regulamin</h4>
                         <p>Regulaminy wystawy i pokazów dostępne są do pobrania w wersji pdf. Warunkiem udziału w wystawie jest akceptacja wyżej wymienionych Regulaminów. </p>
-                        <a href="for-exhibitors-regulations.html" class="">czytaj</a>
+                        <a href="for-exhibitors-regulations-en.html" class="">czytaj</a>
                     </div>
                 </div>
             </div>
