dodanie linku do patronów EN

--- a/index-en.html
+++ b/index-en.html
@@ -44,7 +44,7 @@
 				<li><a href="../../src/html/program-en.html">Plan-Programme</a></li>				
 				<li><a href="../../src/html/galleries-en.html">Gallery</a></li>
 				<!-- <li><a href="../../#Partnerzy">Partnerzy</a></li> -->
-				<li><a href="../../#patronat">Patronage</a></li>
+				<li><a href="#patronatEn">Patronage</a></li>
 				<li><a href="../../src/html/contact-en.html">Contact</a></li>
 				<!-- <li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
 				<li class="flag UK"><a href="index.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
@@ -284,7 +284,7 @@
 	</div>
 
 	<div class="assosiates">
-		<div class="container" id="patronat">
+		<div class="container" id="patronatEn">
 			<h3></h3>
 			<div class="aside-small-header">
 				<h4>Patronage</h4>
