--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -37,7 +37,7 @@
                 <li><a href="../../src/html/program-en.html">Plan-Programme</a></li>                
                 <li><a href="../../src/html/galleries-en.html">Gallery</a></li>
                 <!-- <li><a href="../../#Partnerzy">Partnerzy</a></li> -->
-                <li><a href="../../#patronat">Patronage</a></li>
+                <li><a href="../../index-en.html#patronatEn">Patronage</a></li>
                 <li><a href="../../src/html/contact-en.html">Contact</a></li>
                 <!-- <li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
                 <li class="flag UK"><a href="../../src/html/exhibitors.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
