dodanie na strone glowna przycisku oraz zakomentowanie flagi

--- a/src/html/news.html
+++ b/src/html/news.html
@@ -38,7 +38,7 @@
 				<li><a href="../../src/html/galleries.html">Galeria</a></li>
 				<li><a href="../../#patronat">Patronat</a></li>
 				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<li class="flag GB"><a href="../../src/html/news.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				<!-- <li class="flag GB"><a href="../../src/html/news.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
 				<!-- <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
 				<li class="flag UK"><a href="#"><img src="../assets/img/ukraineflag.png" alt="ukraina"></a></li> -->
 
@@ -178,7 +178,7 @@
 <!-- 				<img src="../../src/assets/img/news7S.jpg" alt="" class="header"> -->
 				<div>
 					<p class="date">2 maja 2018</p>
-					<h3 class="title">Komis-aukcja maszyn</br></br> </h3>
+					<h3 class="title">Aukcja maszyn używanych</br></br> </h3>
 					<!-- <p class="description">Komis aukcja maszyn rolniczych-budowlanych, ciągników.</p> -->
 					<a href="../../src/html/single-news7.html">Czytaj dalej</a>
 				</div>
