--- a/src/html/single-news7.html
+++ b/src/html/single-news7.html
@@ -41,7 +41,7 @@
 				<li><a href="../../src/html/galleries.html">Galeria</a></li>
 				<li><a href="../../#patronat">Patronat</a></li>
 				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<li class="flag GB"><a href="../../src/html/single-news7.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+				<!-- <li class="flag GB"><a href="../../src/html/single-news7.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
 				<!-- <li class="flag GB"><a href="#"><img src="../assets/img/gbflag.png" alt="wielka brytania"></a></li>
 				<li class="flag UK"><a href="#"><img src="../assets/img/ukraineflag.png" alt="ukraina"></a></li> -->
 
@@ -53,7 +53,7 @@
 			<ul class="breadcrumbs">
 				<li><a href="../../index.html">start</a></li>				
 				<li><a href="../../src/html/news.html">aktualności</a></li>
-				<li class="active"><a href="">Komis-aukcja maszyn</a></li>
+				<li class="active"><a href="">Aukcja maszyn używanych</a></li>
 			</ul>
 			
 		</div>			
