dodanie do strony testowej przycisku oraz odkoemntowanie flagi

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- <li><a href="../../#Partnerzy">Partnerzy</a></li> -->
 				<li><a href="../../#patronat">Patronat</a></li>
 				<li><a href="../../src/html/contact.html">Kontakt</a></li>
-				<!-- <li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
+				<li class="flag GB"><a href="index-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
 				<!-- <li class="flag UK"><a href="index.html"><img src="../../src/assets/img/polandflag.png" alt="poland"></a></li>
 				 -->
 			</ul>
