--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -38,7 +38,7 @@
                 <li><a href="../../src/html/galleries.html">Galeria</a></li>
                 <li><a href="../../#patronat">Patronat</a></li>
                 <li><a href="../../src/html/contact.html">Kontakt</a></li>
-                <li class="flag GB"><a href="../../src/html/contact-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
+                <!-- <li class="flag GB"><a href="../../src/html/contact-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
 
             </ul>
         </nav>
@@ -60,11 +60,9 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact">
                         <p>
-                            <b>Organizator Sawa Expo</b> <br>
+                            <b>Organizator Sawa Expo</b> <br> <br>
 
                             
-                            <!-- Stanisław Sawa<br> -->
-                            Tel. <b>+48 604 750 443 </b><br><br>
 
                             <b>Biuro Agro Targów Wschód</b><br>
                             Tel. <b>+48 606 418 785</b><br>
@@ -82,9 +80,13 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
                        <p>
-                           <b>Dyrektor zarządzający:</b> <br>
+                            <b>Właściciel<br> </b>
+                            Stanisław Sawa<br>                   
+                            Tel. <b>+48 604 750 443 </b><br><br>
+
+                           <b>Dyrektor zarządzający</b> <br>
                            Krzysztof Sawa <br>
-                           Contact in English:<br>
+                           Contact in English<br>
                            Tel. <b>+ 48 517 478 770 </b><br>
                            <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span>
                        </p>
