zmiany w ang wersji

--- a/src/html/contact-en.html
+++ b/src/html/contact-en.html
@@ -62,13 +62,13 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact">
                         <p>
-                            <b>Organizer Sawa Expo</b> <br>
+                            <b>Organizer Sawa Expo</b> <br> <br>
 
                             
                             <!-- Stanisław Sawa<br> -->
-                            Tel. <b>+48 604 750 443 </b><br><br>
+                            
 
-                            <b>Office Agro Targów Wschód</b><br>
+                            <b>Office Agro Targi Wschód</b><br>
                             Tel. <b>+48 606 418 785</b><br>
                             Tel. <b>+48 502 026 753</b><br>
                             <b><a href="mailto:biuro@agrotargiwschod.pl"> e-mail: biuro@agrotargiwschod.pl</a></b><br>
@@ -84,7 +84,11 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
                        <p>
-                           <b>Managing director:</b> <br>
+                            <b>Owner<br> </b>
+                            Stanisław Sawa<br>                   
+                            Tel. <b>+48 604 750 443 </b><br><br>
+
+                           <b>Managing director</b> <br>
                            Krzysztof Sawa <br>
                            Contact in English:<br>
                            Tel. <b>+ 48 517 478 770 </b><br>
