--- a/src/html/for-exhibitors-application-en.html
+++ b/src/html/for-exhibitors-application-en.html
@@ -193,7 +193,7 @@
                 <div class="col-xs-12 no-padding">
                     <div class="text-box">
                         <h3>Gastronomy:</h3>
-                        <p>Representatives of catering companies (catering / beer sales), please contact the organizer directly Agro Targów Wschód Stanisławem Sawą.</p>
+                        <p>Representatives of catering companies (catering / beer sales), please contact the organizer directly Agro Targi Wschód Stanisław Sawą.</p>
                     </div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
                         <h4>Regulations</h4>
                         <p>Regulations for exhibitions and shows are available for download in the pdf version. The condition for participation in the exhibition is the acceptance of the above-mentioned Regulations.
  </p>
-                        <a href="for-exhibitors-regulations-en.html" class="">read</a>
+                        <a href="for-exhibitors-regulations.html" class="">read</a>
                     </div>
                 </div>
             </div>
