--- a/src/html/for-exhibitors-en.html
+++ b/src/html/for-exhibitors-en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
     <head>
-    <title> 8-9 czerwca 2019 III Agro Targi Wschód </title>
+    <title> 8-9 June 2019 III Agro Targi Wschód </title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -61,7 +61,7 @@
                     <div class="info-banner _3">
                         <img class="icon" src="../../src/assets/img/xyz.png" alt="">
                         <h4>Plan-Programme</h4>
-                        <p>Plan-Programme III International Agro Targów Wschód 8 – 9 June 2019 r.</p>
+                        <p>Plan-Programme III International Agro Targi Wschód 8 – 9 June 2019 r.</p>
                         <a href="program-en.html" class="">read</a>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <img class="icon" src="../../src/assets/img/REGULAMIN.png" alt="">
                         <h4>Regulations</h4>
                         <p>Regulations for exhibitions and shows are available for download in the pdf version. The condition for participation in the exhibition is the acceptance of the above-mentioned Regulations. </p>
-                        <a href="for-exhibitors-regulations-en.html" class="">read</a>
+                        <a href="for-exhibitors-regulations.html" class="">read</a>
                     </div>
                 </div>
                 
