--- a/src/html/program-en.html
+++ b/src/html/program-en.html
@@ -57,7 +57,7 @@
             </div>			
         </div>
 
-        <h3 class="h-program"> Program III International Agro Targi Wschód 8 – 9 June 2019 r.</h3>
+        <!-- <h3 class="h-program"> Program III International Agro Targi Wschód 8 – 9 June 2019 r.</h3> -->
       
 
           <div class="container gallery">   
@@ -75,7 +75,7 @@
         </div>
 
         <div class="container">
-            <h3 class="h-program">Program III International Agro Targi Wschód – 9 June 2019 r.</h3>
+            <h3 class="h-program">Program III International Agro Targi Wschód 8 – 9 June 2019 r.</h3>
             <div class="row">
                 <div class="col-xs-12">
                    <ol class="regulations">
