--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -38,7 +38,7 @@
                 <li><a href="../../src/html/galleries.html">Galeria</a></li>
                 <li><a href="../../#patronat">Patronat</a></li>
                 <li><a href="../../src/html/contact.html">Kontakt</a></li>
-                <!-- <li class="flag GB"><a href="../../src/html/contact-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li> -->
+                <li class="flag GB"><a href="../../src/html/contact-en.html"><img src="../../src/assets/img/gbflag.png" alt="wielka brytania"></a></li>
 
             </ul>
         </nav>
