--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -66,7 +66,7 @@
         <div class="heading-sec">
           <div id="wystawcy" class="section-header text-center">
 		  
-           <h3> Exhibitors Agro Targów Wschód 2019</h3>  
+           <h3> Exhibitors Agro Targi Wschód 2019</h3>  
 			
            
           </div>
