dodanie news pl w ang menu

--- a/src/html/zaproszenie-en.html
+++ b/src/html/zaproszenie-en.html
@@ -33,7 +33,7 @@
             <nav>
             <ul class="menu">
                 <li><a href="../../index-en.html">Start</a></li>
-                <li><a href="../../src/html/news-en.html">News</a></li>
+                <li><a href="../../src/html/news.html">News</a></li>
                 <li><a href="../../src/html/exhibitors-en.html">Exhibitors</a></li>
                 <!-- <li><a href="../../src/html/for-exhibitors-application.html">Cennik</a></li> -->
                 <li><a href="../../src/html/for-exhibitors-en.html">For exhibitors</a></li>
