poprawka w stopce w ang

--- a/src/html/galleries-en.html
+++ b/src/html/galleries-en.html
@@ -289,7 +289,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-2">
                     <ul>Start
-                        <li><a href="src/html/news-en.html">News</a></li>
+                        <li><a href="src/html/news.html">News</a></li>
                         <li><a href="src/html/program-en.html">Plan-Programme</a></li>               
                         <!-- <li><a href="src/html/for-visitors.html">Dla zwiedzających</a></li> -->
                         <li><a href="src/html/for-exhibitors-en.html">For exhibitors</a></li>
@@ -310,7 +310,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-2">
                     <ul>For exhibitors
                         <li><a href="src/html/for-exhibitors-application-en.html">Applications</a></li>
-                        <li><a href="src/html/for-exhibitors-regulations-en.html">Regulations</a></li>
+                        <li><a href="src/html/for-exhibitors-regulations.html">Regulations</a></li>
                         <!-- <li><a href="src/html/for-exhibitors-drive.html">Dojazd i hotele</a></li> 
                         <li><a href="src/html/for-exhibitors-comm.html">Reklama</a></li>-->
                     </ul>
