--- a/src/html/zaproszenie-en.html
+++ b/src/html/zaproszenie-en.html
@@ -55,7 +55,7 @@
                 <ul class="breadcrumbs">
                     <li><a href="../../index.html">start</a></li>				
                     <li><a href="../../src/html/for-exhibitors.html">for exhibitors</a></li>
-                    <li class="active"><a href="">We invite you to the 3rd  Agro Targi Wschód 2019Zapraszamy  na III Agro Targi Wschód 2019</a></li>
+                    <li class="active"><a href="">We invite you to the 3rd Agro Targi Wschód 2019</a></li>
                 </ul>
                   
             </div>			
@@ -65,11 +65,11 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="text-box text-justify">
-                    We cordially invite you to participate in the Third International Agro Targach Wschód, which will be held on June 8-9, 2019 in Skołoszów, Radymno commune (Przemyśl A4 motorway junction).
+                    We cordially invite you to participate in the Third International Agro Targi Wschód, which will be held on June 8-9, 2019 in Skołoszów, Radymno commune (Przemyśl A4 motorway junction).
 
         It is a comprehensive exhibition of agricultural machinery and equipment, fertilizers, seeds, plant protection chemicals and companies from the financial sector and other industries related to agriculture, in south-eastern Poland, near the border with Ukraine.
 
-        Our fairs are very popular in neighboring countries. The Agro Targów Wschód brand is recognizable both in Poland and in Ukraine. The area of the Fair is located directly at the A4 motorway junction and national road 77, located just 20 km from the largest Polish-Ukrainian border crossing Korczowa-Krakowiec. It is a perfect place to establish business contacts with contractors from the east.
+        Our fairs are very popular in neighboring countries. The Agro Targi Wschód brand is recognizable both in Poland and in Ukraine. The area of the Fair is located directly at the A4 motorway junction and national road 77, located just 20 km from the largest Polish-Ukrainian border crossing Korczowa-Krakowiec. It is a perfect place to establish business contacts with contractors from the east.
 
         Agro Targi Wschód is also an opportunity to exchange views and experiences. The event brings together clients from Central and Eastern Europe, giving the opportunity to present their products to a wide audience, compare offers and evaluate the industry.
              Thanks to the support of the most important national institutions from the agricultural industry, the Fair participants will have the opportunity to directly meet specialists and discuss current trends and changes.
@@ -127,7 +127,7 @@
                         <img class="icon" src="../../src/assets/img/REGULAMIN.png" alt="">
                         <h4>Regulations</h4>
                         <p>Regulations for exhibitions and shows are available for download in the pdf version. The condition for participation in the exhibition is the acceptance of the above-mentioned Regulations. </p>
-                        <a href="for-exhibitors-regulations-en.html" class="">read</a>
+                        <a href="for-exhibitors-regulations.html" class="">read</a>
                     </div>
                 </div>
             </div>
