--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -150,6 +150,14 @@
 	        	        		 <li><img src="../../src/assets/img/sponsorzy/mini/podr300.png" alt="sponsors"/></li> -->
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
+				
+
+				<li><img src="../../src/assets/img/sponsorzy/mini/yara250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/complex250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/kamrol250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/pawrol250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/procam250.png" alt="sponsors"/></li>
+
 
            		<li><img src="../../src/assets/img/sponsorzy/mini/apra250.png" alt="sponsors"/></li>
            		<li><img src="../../src/assets/img/sponsorzy/mini/extrans250.png" alt="sponsors"/></li>
