--- a/src/html/media.html
+++ b/src/html/media.html
@@ -72,7 +72,7 @@
           		<h3>TVP Rzeszów</h3> 
 				
 				<div class="video-responsive">			
-					<iframe src="http://www.youtube.com/embed/9stReBrRCCQ" width="420" height="315" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/9stReBrRCCQ" width="420" height="315" frameborder="0" allowfullscreen></iframe>
 				</div>
 				
 			
