dodanie nowego wystawcy

--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -150,7 +150,8 @@
 	        	        		 <li><img src="../../src/assets/img/sponsorzy/mini/podr300.png" alt="sponsors"/></li> -->
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
-
+				
+				<li><img src="../../src/assets/img/sponsorzy/mini/dexwal250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/yara250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/complex250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/kamrol250.png" alt="sponsors"/></li>
