--- a/src/html/exhibitors.html
+++ b/src/html/exhibitors.html
@@ -152,6 +152,8 @@
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
 				
 
+
+				<li><img src="../../src/assets/img/sponsorzy/mini/dexwal250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/yara250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/complex250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/kamrol250.png" alt="sponsors"/></li>
