dodanie patronatu medialnego agroprofil

--- a/index-en.html
+++ b/index-en.html
@@ -341,12 +341,12 @@
 				<hr>	
 			</div>
 				<div class="row">
-					<!-- <div class="col-xs-12 col-md-3">
-						<img src="src/assets/img/media/nowiny24.png" alt="">
-						<h4></h4>
-					</div> -->
-					<div class="col-xs-12 col-md-12  sponsorship">
+					<div class="col-xs-12 col-md-6  sponsorship">
 						<img src="src/assets/img/media/tvp.png" alt="">
+						<h4></h4>
+					</div>
+					<div class="col-xs-12 col-md-6">
+						<img src="src/assets/img/media/agroprofil.png" alt="">
 						<h4></h4>
 					</div>
 					<!-- <div class="col-xs-12 col-md-3">
