--- a/index.html
+++ b/index.html
@@ -347,14 +347,15 @@
 				<hr>	
 			</div>
 				<div class="row">
-					<!-- <div class="col-xs-12 col-md-3">
-						<img src="src/assets/img/media/nowiny24.png" alt="">
-						<h4></h4>
-					</div> -->
-					<div class="col-xs-12 col-md-12  sponsorship">
+					<div class="col-xs-12 col-md-6  sponsorship">
 						<img src="src/assets/img/media/tvp.png" alt="">
 						<h4></h4>
 					</div>
+					<div class="col-xs-12 col-md-6">
+						<img src="src/assets/img/media/agroprofil.png" alt="">
+						<h4></h4>
+					</div>
+					
 					<!-- <div class="col-xs-12 col-md-3">
 						<img src="src/assets/img/media/zycie.png" alt="">
 						<h4></h4>
