--- a/index.html
+++ b/index.html
@@ -347,23 +347,28 @@
 				<hr>	
 			</div>
 				<div class="row">
-					<div class="col-xs-12 col-md-6  sponsorship">
-						<img src="src/assets/img/media/tvp.png" alt="">
-						<h4></h4>
-					</div>
-					<div class="col-xs-12 col-md-6">
-						<img src="src/assets/img/media/agroprofil.png" alt="">
-						<h4></h4>
-					</div>
 					
-					<!-- <div class="col-xs-12 col-md-3">
-						<img src="src/assets/img/media/zycie.png" alt="">
+
+					<div class="col-xs-12 col-md-2 rowMargin" >
+						<img src="src/assets/img/media/tvp3rze190.png" alt="">
 						<h4></h4>
 					</div>
-					<div class="col-xs-12 col-md-3">
-						<img src="src/assets/img/media/gazeta-jaroslawska.png" alt="">
+					<div class="col-xs-12 col-md-2 rowMargin">
+						<img src="src/assets/img/media/radiovia190.png" alt="">
 						<h4></h4>
-					</div> -->
+					</div>
+					<div class="col-xs-12 col-md-2 rowMargin">
+						<img src="src/assets/img/media/farmer190.png" alt="">
+						<h4></h4>
+					</div>
+					<div class="col-xs-12 col-md-2 rowMargin">
+						<img src="src/assets/img/media/bezpluga190.png" alt="">
+						<h4></h4>
+					</div>
+					<div class="col-xs-12 col-md-2 rowMargin">
+						<img src="src/assets/img/media/agroprofil190.png" alt="">
+						<h4></h4>
+					</div>
 
 				</div>
 			
