dodanie tvp jako patronat , dwa wiersze patronów medialnych

--- a/index.html
+++ b/index.html
@@ -348,25 +348,31 @@
 			</div>
 				<div class="row">
 					
-
-					<div class="col-xs-12 col-md-2 rowMargin" >
+					<div class="col-xs-12 col-md-4 " >
+						<img src="src/assets/img/media/tvp190.png" alt="">
+						<h4></h4>
+					</div>
+					<div class="col-xs-12 col-md-4 " >
 						<img src="src/assets/img/media/tvp3rze190.png" alt="">
 						<h4></h4>
 					</div>
-					<div class="col-xs-12 col-md-2 rowMargin">
-						<img src="src/assets/img/media/radiovia190.png" alt="">
-						<h4></h4>
-					</div>
-					<div class="col-xs-12 col-md-2 rowMargin">
+					<div class="col-xs-12 col-md-4 ">
 						<img src="src/assets/img/media/farmer190.png" alt="">
 						<h4></h4>
 					</div>
-					<div class="col-xs-12 col-md-2 rowMargin">
+
+				</div>	
+				<div class="row">
+					<div class="col-xs-12 col-md-4 ">
 						<img src="src/assets/img/media/bezpluga190.png" alt="">
 						<h4></h4>
 					</div>
-					<div class="col-xs-12 col-md-2 rowMargin">
+					<div class="col-xs-12 col-md-4 ">
 						<img src="src/assets/img/media/agroprofil190.png" alt="">
+						<h4></h4>
+					</div>
+					<div class="col-xs-12 col-md-4 ">
+						<img src="src/assets/img/media/radiovia190.png" alt="">
 						<h4></h4>
 					</div>
 
