--- a/index-en.html
+++ b/index-en.html
@@ -174,7 +174,8 @@
 					<p><span>III Agro Targi Wschód, which will take place 8-9.06.2019</p>
 					<p>Skołoszów, St. Przemyska 37, Radymno 37-550, Jarosław County, Podkarpackie Voivodeship, at the node "Przemyśl" highway A4</p>
 					<a href="src/html/zaproszenie-en.html">see the invitation</a></br></br>
-					<a href="src/html/contact-en.html">see the access map</a>
+					<a href="src/html/contact-en.html">see the access map</a></br></br>
+					<a href="src/html/plakat.html">see the poster</a>
 					
 				</div>
 			</div>
