--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 					<p><span>III Agro Targi Wschód, które odbędą się 8-9.06.2019</p>
 					<p>Skołoszów, ul. Przemyska 37, Radymno 37-550, powiat jarosławski, woj. podkarpackie, przy węźle "Przemyśl" autostrady A4</p>
 					<a href="src/html/zaproszenie.html">zobacz zaproszenie</a></br></br>
-					<a href="src/html/contact.html">zobacz mapę dojazdu</a>
+					<a href="src/html/contact.html">zobacz mapę dojazdu</a></br></br>
+					<a href="src/html/plakat.html">zobacz plakat</a>
 					
 				</div>
 			</div>
