dodanie aukcji wschod, logotyp oraz zmiana tekstu w stronie aukcji, zmiana tła

--- a/src/html/single-news7.html
+++ b/src/html/single-news7.html
@@ -27,7 +27,7 @@
 <body class="news">
 	<header class="header">
 		<div class="logo">
-			<a href="../../index.html"><img src="../assets/img/logo.png" alt="Logo"></a>
+			<a href="../../index.html"><img src="../assets/img/logoAukcja.png" alt="Logo"></a>
 		</div>  
         <div class="hamburger"></div>		
 		<nav>
@@ -78,7 +78,7 @@
 		<div class="container gallery">
 			
 
-			<h3  align="center" >Aukcja maszyn używanych 8-9 Czerwca 2019 na Agro Targach Wschód Sektor Aukcyjny
+			<h3  align="center" >Poniżej przedstawione maszyny - ciągniki będą uczestniczył w Aukcji maszyn używanych 8-9-10 Czerwca 2019 na Agro Targach Wschód - Sektor Aukcyjny
 </h3>
 			<div class="row">
 				
