--- a/src/html/single-news7.html
+++ b/src/html/single-news7.html
@@ -78,7 +78,7 @@
 		<div class="container gallery">
 			
 
-			<h3  align="center" >Poniżej przedstawione maszyny - ciągniki będą uczestniczył w Aukcji maszyn używanych 8-9-10 Czerwca 2019 na Agro Targach Wschód - Sektor Aukcyjny
+			<h3  align="center" >Poniżej przedstawione maszyny - ciągniki będą wystawione na Aukcji maszyn używanych 8-9-10 Czerwca 2019 na Agro Targach Wschód - Sektor Aukcyjny
 </h3>
 			<div class="row">
 				
