dodanie zobacz plakat obok Co nowego.

--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
 	<div class="news container">		
 		<h3>Aktualności</h3>
 		<div class="aside-small-header">
-			<h4>Co nowego?</h4>
+			<h4>Co nowego?<a href="src/html/plakat.html" style="font-size: 24px; padding-left: 100px;">Zobacz plakat</a></h4>
 			<hr>	
 		</div>
+		
+
 		<div class="row">
 			
 			<div class="col-xs-12 col-md-4 single-news">
