--- a/src/html/contact-en.html
+++ b/src/html/contact-en.html
@@ -84,15 +84,15 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
                        <p>
-                            <b>Owner<br> </b>
+                            <b>Owner<br> <br> </b>
                             Stanisław Sawa<br>                   
                             Tel. <b>+48 604 750 443 </b><br><br>
 
-                           <b>Managing director</b> <br>
+                           <!-- <b>Managing director</b> <br>
                            Krzysztof Sawa <br>
                            Contact in English:<br>
                            Tel. <b>+ 48 517 478 770 </b><br>
-                           <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span>
+                           <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span> -->
                        </p>
                         <!--<p>
                             <b>Adres do korespondencji:</b> <br>
