--- a/index-en.html
+++ b/index-en.html
@@ -121,7 +121,7 @@
 	<div class="news container">		
 		<h3>News</h3>
 		<div class="aside-small-header">
-			<h4>What's new?</h4>
+			<h4>What's new? <a href="src/html/plakat.html" style="font-size: 24px; padding-left: 100px;">See Poster</a></h4>
 			<hr>	
 		</div>
 		<div class="row">
