dodanie wiceprezesa zarzadu do kontaktu

--- a/src/html/contact-en.html
+++ b/src/html/contact-en.html
@@ -84,7 +84,7 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
                        <p>
-                            <b>Owner<br> <br> </b>
+                            <b>Owner<br> </b>
                             Stanisław Sawa<br>                   
                             Tel. <b>+48 604 750 443 </b><br><br>
 
@@ -93,6 +93,11 @@
                            Contact in English:<br>
                            Tel. <b>+ 48 517 478 770 </b><br>
                            <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span> -->
+
+                           <b>Vice President</b> <br>
+                          Karolina Kornas <br>
+                          Tel. <b>+ 48 517 478 770 </b><br>
+                          <span><a href="mailto:k.kornas@agrotargiwschod.pl">e-mail: k.kornas@agrotargiwschod.pl</a></span>
                        </p>
                         <!--<p>
                             <b>Adres do korespondencji:</b> <br>
