--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -80,15 +80,20 @@
                 <div class="col-xs-12 col-sm-6 no-padding">
                     <div class="box-contact" >
                        <p>
-                            <b>Właściciel<br><br> </b>
+                            <b>Właściciel<br></b>
                             Stanisław Sawa<br>                   
                             Tel. <b>+48 604 750 443 </b><br><br>
                             
-                           <!-- <b>Dyrektor zarządzający</b> <br>
-                           Krzysztof Sawa <br>
-                           Contact in English<br>
-                           Tel. <b>+ 48 517 478 770 </b><br>
-                           <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span> -->
+                          <!-- <b>Dyrektor zarządzający</b> <br>
+                          Krzysztof Sawa <br>
+                          Contact in English<br>
+                          Tel. <b>+ 48 517 478 770 </b><br>
+                          <span><a href="mailto:k.sawa@agrotargiwschod.pl">e-mail: k.sawa@agrotargiwschod.pl</a></span> -->
+
+                          <b>Wiceprezes Zarządu</b> <br>
+                          Karolina Kornas <br>
+                          Tel. <b>+ 48 517 478 770 </b><br>
+                          <span><a href="mailto:k.kornas@agrotargiwschod.pl">e-mail: k.kornas@agrotargiwschod.pl</a></span>
                        </p>
                         <!--<p>
                             <b>Adres do korespondencji:</b> <br>
