--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -151,6 +151,12 @@
            		
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
 				
+				<li><img src="../../src/assets/img/sponsorzy/mini/agroubezpieczenia250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/aquawiert250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/deutzfahr250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/janibax250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/vingberg250.png" alt="sponsors"/></li>
+				<li><img src="../../src/assets/img/sponsorzy/mini/grupamularski250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/agrovse250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/avon250.png" alt="sponsors"/></li>
 				<li><img src="../../src/assets/img/sponsorzy/mini/concordia250.png" alt="sponsors"/></li>
