dodanie do aktualności targi kielce

--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
 		
 
 		<div class="row">
+
+			<div class="col-xs-12 col-md-4 single-news">
+<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
+				 -->				<div>
+					<p class="date"></p>
+					<h3 class="title">Targi Kielce na Targach<br><br></h3>
+					<p class="description">Organizator największych targów w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>
+					<a href="src/html/single-news20.html">Czytaj dalej</a>
+				</div>
+			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">
 <!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
@@ -158,15 +168,15 @@
 			</div>
 
 
-			<div class="col-xs-12 col-md-4 single-news">				
-				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+				<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
 				<div>
 					<p class="date"></p>
 					<h3 class="title">Współpraca z Politechniką Rzeszowską</h3>
 					<p class="description">Współpraca polegająca na obustronnej promocji Agro Targów Wschód oraz Politechniki Rzeszowskiej</p>
 					<a href="src/html/single-news19.html">Czytaj dalej</a>
 				</div>
-			</div>
+			</div> -->
 		
 		</div>
 		<div class="row all-news">
