--- a/src/html/news.html
+++ b/src/html/news.html
@@ -73,6 +73,16 @@
 
 	<div class="news container">	
 		<div class="row">
+
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Targi Kielce na Targach</br></br></h3>
+				<!-- <p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p> -->
+				<a href="../../src/html/single-news20.html">Czytaj dalej</a>
+				</div>
+			</div>
 			
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
@@ -103,6 +113,11 @@
 				<a href="../../src/html/single-news18.html">Czytaj dalej</a>
 				</div>
 			</div>
+	</div>
+
+
+
+		<div class="row">
 			
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
@@ -114,15 +129,6 @@
 				</div>
 			</div>
 
-
-
-		</div>
-
-
-
-		<div class="row">
-			
-			
 			<div class="col-xs-12 col-md-4 single-news">				
 				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
 				<div>
@@ -144,20 +150,6 @@
 				</div>
 			</div>
 			
-			
-			
-
-			<div class="col-xs-12 col-md-4 single-news">				
-<!-- 				<img src="../../src/assets/img/wyjazd.jpg" alt="" class="header">
-			--><div>
-					<p class="date">25 maja 2018</p>
-					<h3 class="title">Pokazy Agro Targi Wschód</h3>
-					<!-- <p class="description">Organizator Agro Targów Wschód przeprowadził pokazy próbne w dniu 25.05.2018 r.</p> -->
-					<a href="../../src/html/single-news10.html">Czytaj dalej</a>
-				</div>
-			</div>
-
-			
 
 		</div>
 		
@@ -173,12 +165,21 @@
 				</div>
 			</div> -->
 			
-
+			
+			<div class="col-xs-12 col-md-4 single-news">				
+<!-- 				<img src="../../src/assets/img/wyjazd.jpg" alt="" class="header">
+			--><div>
+					<p class="date">25 maja 2018</p>
+					<h3 class="title">Pokazy Agro Targi Wschód</h3>
+					<!-- <p class="description">Organizator Agro Targów Wschód przeprowadził pokazy próbne w dniu 25.05.2018 r.</p> -->
+					<a href="../../src/html/single-news10.html">Czytaj dalej</a>
+				</div>
+			</div>
 			<div class="col-xs-12 col-md-4 single-news">				
 <!-- 				<img src="../../src/assets/img/news7S.jpg" alt="" class="header"> -->
 				<div>
 					<p class="date">2 maja 2018</p>
-					<h3 class="title">Aukcja maszyn używanych</br></br> </h3>
+					<h3 class="title">Aukcja maszyn używanych</br> </h3>
 					<!-- <p class="description">Komis aukcja maszyn rolniczych-budowlanych, ciągników.</p> -->
 					<a href="../../src/html/single-news7.html">Czytaj dalej</a>
 				</div>
