dodanie targi kielce w wystawcach w pierwszym wierszu

--- a/src/html/exhibitors-en.html
+++ b/src/html/exhibitors-en.html
@@ -95,6 +95,11 @@
 	        	           			</a>
 	        	           		</li> 
 	        	           		<li>
+	        	           			<a href="https://www.targikielce.pl/">
+	        	           				<img src="../../src/assets/img/sponsorzy/mini/TargiKielce.png" alt="sponsors"/>
+	        	           			</a>	
+	        	           		</li>
+	        	           		<li>
 	        	           			<a href="http://www.iung.pulawy.pl/">
 	        	           				<img src="../../src/assets/img/sponsorzy/mini/iung300.png" alt="sponsors"/>
 	        	           			</a>	
@@ -152,7 +157,7 @@
            		<!-- <h1> Wystawcy Agro Targów Wschód 2019</h1>  -->
 				
 
-				<li><img src="../../src/assets/img/sponsorzy/mini/TargiKielce250.png" alt="sponsors"/></li>
+				<!-- <li><img src="../../src/assets/img/sponsorzy/mini/TargiKielce250.png" alt="sponsors"/></li> -->
 				<li><img src="../../src/assets/img/sponsorzy/mini/case250.png" alt="sponsors"/></li>		
 				<li><img src="../../src/assets/img/sponsorzy/mini/kisiel250.png" alt="sponsors"/></li>
 				
