dodanie targi kielce w news EN

--- a/index-en.html
+++ b/index-en.html
@@ -130,7 +130,17 @@
 <!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
 				 -->				<div>
 					<p class="date"></p>
-					<h3 class="title">National Research Institutes at the Fair</br></br></h3>
+					<h3 class="title">Targi Kielce at the Fair</br></br></h3>
+					<p class="description">Organizer of the largest trade fairs in Central and Eastern Europe at Agro Fair East.</p>
+					<a href="src/html/single-news20.html">Read on</a>
+				</div>
+			</div>
+
+			<div class="col-xs-12 col-md-4 single-news">
+<!-- 				<img src="../../src/assets/img/news17/logomin2.png" alt="" class="header">
+				 -->				<div>
+					<p class="date"></p>
+					<h3 class="title">National Research Institutes at the Fair</br></h3>
 					<p class="description">III International  Agro Targi Wschód will be a place where there will be Polish science, which sets standards for modern and effective agriculture.</p>
 					<a href="src/html/single-news17.html">Read on</a>
 				</div>
@@ -140,22 +150,22 @@
 				<!-- <img src="src/assets/img/news15/logomin.png"  alt="" class="header"> -->
 				<div>
 					<p class="date"></p>
-					<h3 class="title">Marshal invites</br></br></br></h3>
+					<h3 class="title">Marshal invites</br></br></h3>
 					<p class="description">The Marshal of the Podkarpackie Province invites to the 3rd International Agro Targi Wschód</p>
 					<a href="src/html/single-news18.html">Read on</a>
 				</div>
 			</div>
 
 
-			<div class="col-xs-12 col-md-4 single-news">				
-				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+				<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
 				<div>
 					<p class="date"></p>
 					<h3 class="title">Cooperation with the Rzeszów University of Technology</h3>
 					<p class="description">Cooperation based on the mutual promotion of Agro Targów Wschód and Rzeszów University of Technology</p>
 					<a href="src/html/single-news19.html">Read on</a>
 				</div>
-			</div>
+			</div> -->
 		
 		</div>
 		<div class="row all-news">
