dodanie targi kielce na stronie glownej w news

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 	<div class="news container">		
 		<h3>Aktualności</h3>
 		<div class="aside-small-header">
-			<h4>Co nowego?<a href="src/html/plakat.html" style="font-size: 24px; padding-left: 100px;">Zobacz plakat</a></h4>
+			<h4>Co nowego?<a href="src/html/plakat.html" style="font-size: 24px; padding-left: 50px;">Plakat</a>
+			<a href="src/html/single-news20.html" style="font-size: 24px; padding-left: 50px;">Targi Kielce</a>
+			</h4>
 			<hr>	
 		</div>
 		
@@ -142,7 +144,7 @@
 				 -->				<div>
 					<p class="date"></p>
 					<h3 class="title">Targi Kielce na Targach<br><br></h3>
-					<p class="description">Organizator największych targów w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>
+					<p class="description">Organizator największych halowych targów techniki rolniczej w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>
 					<a href="src/html/single-news20.html">Czytaj dalej</a>
 				</div>
 			</div>
