--- a/src/html/single-news20.html
+++ b/src/html/single-news20.html
@@ -66,7 +66,7 @@
 		<div class="newsContent">
 			<p class="date"></p>
 			<!-- <h3 class="title">Podziękowania, listy</h3> -->
-			<p class="descriptionPRz">	Organizator największych targów w Europie Środkowo-Wschodniej na Agro Targach Wschód.</p>.
+			<p class="descriptionPRz">	Organizator największych halowych targów techniki rolniczej w Europie Środkowo-Wschodniej na Agro Targach Wschód</p>.
 		</div>
 
 		<div class="container gallery">
